Fix calendar button clipping issue

--- a/communitycms/templates/default/style.css
+++ b/communitycms/templates/default/style.css
@@ -572,6 +572,7 @@ table.calendar_nav td a {
 	border: 1px solid #999999;
 	border-radius: 3px;
 	color: #000000;
+	display: block;
 	font-size: small;
 	font-weight: normal;
 	padding: 1px;
